2011-10-03    <zag@manzanillo>

	* models/actions.ome.xml: Added GenotypingProgram as a clean way
	to automatize the attaching of a SnpMarkersSet to GenotypeDataSample.

2011-10-02    <zag@manzanillo>

	* bl/vl/kb/drivers/omero/proxy.py (Proxy.update_snp_positions):
	Now we use slice here too.

2011-10-01    <zag@manzanillo>

	* bl/vl/kb/drivers/omero/proxy_core.py (ProxyCore.get_table_rows):
	Now we use slice and we allow for column selection.

2011-09-28    <zag@manzanillo>

	* examples/import_taqman_results.py: new name for define_taq_markers.

2011-09-27    <zag@manzanillo>

	* bl/vl/utils/snp.py (approx_equal_masks): Added.

	* bl/vl/kb/drivers/omero/proxy_core.py
	(ProxyCore.find_all_by_query): Now it is possible to pass None as
	params.

	* bl/vl/kb/drivers/omero/modeling.py
	(ModelingAdapter.get_objects): removed redundant 'select' from
	query.

2011-09-26    <zag@manzanillo>

	* bl/vl/genotype/io.py (PedWriter): Added a plink compliant ped
	writer.

	* bl/vl/kb/drivers/omero/wrapper.py (MetaWrapper.make_getter):
	changed so that it will return a None when the ome_obj field is
	None. It could be used to trigger a reload, if the field is not
	optional. For the time being, this is left as an exercise for the
	caller.

2011-09-24    <zag@manzanillo>

	* bl/vl/kb/drivers/omero/genotyping.py
	(GenotypingAdapter.SNP_ALIGNMENT_COLS): added Pseudo-autosomal
	region of x (XY), assigned code 25, moved MT to 26.

	* bl/vl/individual/pedigree.py: Now the genotyping status of
	individuals is passed as an aux dict and not as an attribute to
	the individual object.

2011-09-23    <zag@manzanillo>

	* bl/vl/kb/drivers/omero/data_samples.py (SNPMarkersSet): Added
	support to bring markers set markers in memory.

	* bl/vl/kb/drivers/omero/proxy.py
	(Proxy.add_snp_marker_definitions): Changed the op_vid parameter
	to be either an Action or a string. Added some sort of documentation.
	(Proxy.create_snp_markers_set): Added new syntactic sugar.