@@ -263,7 +263,7 @@ class Recorder(Core):
         self.logger.error(f % r['label'])
         continue
 
-      if r['data_sample_type'] == 'GenotypeDataSample':
+      if r['data_sample_type'] and r['data_sample_type'] == 'GenotypeDataSample':
         device = self.preloaded_devices[r['device']]
         if not isinstance(device, self.kb.GenotypingProgram):
           if not r['markers_set']:
@@ -382,6 +382,8 @@ def canonize_records(args, records):
     if 'scanner' in r and 'device' not in r:
       r['device'] = r['scanner']
       r['device_type'] = 'Scanner'
+    if 'data_sample_type' not in r:
+      r['data_sample_type'] = None
     for t in ['options', 'scanner']:
       if not (t in r and r[t].upper() != 'NONE'):
         r[t] = None
